feat: run mapf solver from admin panel
